[gd_scene load_steps=4 format=3 uid="uid://dxe22sfkuqkha"]

[ext_resource type="Script" path="res://Scenes/laser.gd" id="1_6bjx7"]
[ext_resource type="Texture2D" uid="uid://c72tkrpj1pg0r" path="res://Assets/textures/laser.png" id="2_6esc3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_85iay"]
radius = 15.0
height = 72.0

[node name="laser" type="Area2D"]
collision_layer = 16
script = ExtResource("1_6bjx7")
speed = 1000.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-2.14577e-06, 0.500001)
scale = Vector2(9.25, 9.66667)
texture = ExtResource("2_6esc3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_85iay")

[node name="VisibleNotifier" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-23, -1)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleNotifier" to="." method="_on_visible_notifier_screen_exited"]
